--- a/main.ipynb
+++ b/main.ipynb
@@ -2098,6 +2098,86 @@
     "docs = loader.load()\n",
     "print(docs[0].page_content[:500])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "effe22e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pypdf in d:\\anaconda3\\lib\\site-packages (5.7.0)\n",
+      "Requirement already satisfied: python-docx in d:\\anaconda3\\lib\\site-packages (1.2.0)\n",
+      "Requirement already satisfied: python-pptx in d:\\anaconda3\\lib\\site-packages (1.0.2)\n",
+      "Requirement already satisfied: numpy in d:\\anaconda3\\lib\\site-packages (2.2.6)\n",
+      "Requirement already satisfied: lxml>=3.1.0 in d:\\anaconda3\\lib\\site-packages (from python-docx) (5.2.1)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in d:\\anaconda3\\lib\\site-packages (from python-docx) (4.14.1)\n",
+      "Requirement already satisfied: Pillow>=3.3.2 in d:\\anaconda3\\lib\\site-packages (from python-pptx) (11.3.0)\n",
+      "Requirement already satisfied: XlsxWriter>=0.5.7 in d:\\anaconda3\\lib\\site-packages (from python-pptx) (3.2.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pypdf python-docx python-pptx numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "21439f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy==1.26.4 in d:\\anaconda3\\lib\\site-packages (1.26.4)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~umpy (D:\\Anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~umpy (D:\\Anaconda3\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~umpy (D:\\Anaconda3\\Lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!pip install numpy==1.26.4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44b29653",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Semantic Memory Semantic Memory maintains abstract knowledge and factual information that is indepen\n"
+     ]
+    }
+   ],
+   "source": [
+    "from modules.loader import DocumentLoader\n",
+    "\n",
+    "file_path = r\"D:\\WORK\\DocAgent\\data\\1234.docx\"  # یا docx, txt, pptx\n",
+    "\n",
+    "loader = DocumentLoader()\n",
+    "documents = loader.load(file_path)\n",
+    "\n",
+    "print(documents[0].page_content[:100])  # تا 1000 کاراکتر اول نمایش می‌ده\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
